# IEXScoper

./: .env.example  .gitignore  AGENTS.md  PCAPProcessor.py  README.md  config.py  dag_example.py  main.py  pairs_analysis.py  pcap_parser.py  process_files.py  pyproject.toml  quote_parser.py  requirements.txt  schema.sql  simple_concurrent downloader.py  test_dl_pcap.py  tick_parser.py  update_pcap_master.py  web_server.py
PLANS/: IMPLEMENTATION_PLAN.md  greenfield_native_parser_plan.md  iex_parser_benchmark_report.md  missing_tops_backfill_estimate.md  plans-1-q.md  plans1.md  plans2-q.md  plans2.md  plans3.md
docs/: ARCHITECTURE.md  CHANGELOG.md  DEAD_TICKER_RESOLUTION.md  LOGGING.md  SECURITY.md  TASK_LIST.md
old/: .gitignore  README.md  process_tops.py  requirements.txt  schema.sql
tests/: test_backfill_tops_iextools.py  test_close_evidence_review.py  test_daily_trade_bars.py  test_dead_ticker_override_candidates.py  test_dead_ticker_priority_queue.py  test_dead_ticker_resolution_lanes.py  test_dead_ticker_resolution_template.py  test_dead_ticker_resolution_workplan.py  test_dead_ticker_review_queue.py  test_derivative_identity_resolution.py  test_edgar_full_text_cli.py  test_edgar_full_text_client.py  test_edgar_full_text_search.py  test_edgar_full_text_targets.py  test_edgar_full_text_triage.py  test_edgar_ticker_lookup.py  test_iex_entity_enrichment.py  test_iex_parser_benchmark.py  test_iex_runner_unknowns.py  test_iex_transport_payloads.py  test_iextools_backfill_core.py  test_iextools_backfill_recovery.py  test_iextools_backfill_reporting.py  test_import_dead_ticker_manual_overrides.py  test_import_ticker_era_resolution_ledger.py  test_instrument_classifier.py  test_instrument_research_routing.py  test_openfigi_enrichment.py  test_parent_security_resolution_candidates.py  test_parse_iex_hist_index.py  test_resolution_v2_events.py  (+25 more)
(+126 files in other folders)
