[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dag_example", "tick_parser", "quote_parser", "update_pcap_master"]

[project]
name = "IEXScoper"
version = "0.1.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
description = "My project"
readme = "README.md"
requires-python = ">=3.8"